--- a/assignment1/assets/css/style.css
+++ b/assignment1/assets/css/style.css
@@ -257,6 +257,7 @@ textarea {
 		padding: 0px;
 	}
 }
+
 @media screen and (max-width: 768px) {
 	.container {
 		margin-left: 20px;
@@ -305,6 +306,68 @@ textarea {
 		margin: 0;
 		padding-right: 15px; 
 		padding-bottom: 0px;
+	}
+}
+
+@media screen and (max-width: 640px) {
+	header[class="container"] {
+		width: 640px;
+		margin: 0;
+	}
+
+	header h1 {
+		float: left;
+		width: 640px;
+	}
+
+	nav {
+		width: 640px;
+		background-color: white;
+		margin-bottom: 45px;
+		margin-top: 94px;
+		padding: 15px;
+		position: absolute;
+		float: left;
+		left: 0;
+		width: 100%;
+		text-align: center;
+		font-weight: bold;
+	}
+
+	nav ul li:nth-child(2) {
+		padding: 0 80px;
+	}
+
+	#header_bar {
+		background-color: black;
+		clear: both;
+		margin-top: 200px;
+
+	}
+
+	#content {
+		margin-top: 90px
+	}
+
+	#main {
+		width: 545px;
+	}
+
+	#main hr {
+		width: 100%;
+	}
+
+	#main img {
+		width: 545px;
+		height: 600px;
+	}
+
+	#sidebar {
+		width: 545px;
+	}
+
+	#sidebar hr {
+		width: 545px;
 	}
 }
 
